Tests, Code Structure, Cleanup

--- a/app/index.html
+++ b/app/index.html
@@ -6,28 +6,24 @@
 	<style>
 		.navbar { border-radius:0; }
 	</style>
-	<script src="app.js"></script>
+	<script src="config/app.js"></script>
 </head>
 <body ng-app="Mahjong" ng-controller="HomeController">
-
-<!-- NAVIGATION -->
-<nav class="navbar navbar-inverse" role="navigation">
-	<div class="navbar-header">
-		<a class="navbar-brand" ui-sref="#">Mahjong Mayhem</a>
+	<!-- NAVIGATION -->
+	<nav class="navbar navbar-inverse" role="navigation">
+		<div class="navbar-header">
+			<a class="navbar-brand" ui-sref="#">Mahjong Mayhem</a>
+		</div>
+		<ul class="nav navbar-nav">
+			<li><a ui-sref="home">Home</a></li>
+			<li><a ui-sref="games">Games</a></li>
+			<li><a ui-sref="createGame">New Game</a></li>
+			<li><a ng-if="token != undefined" ui-sref="profile"><i class="fa fa-shield"></i>Profile</a></li>
+			<li><a ng-if="token == undefined" href="http://mahjongmayhem.herokuapp.com/auth/avans?callbackUrl=http://localhost:3000/%23/authcallback"><i class="fa fa-shield"></i> Login</a></li>
+		</ul>
+	</nav>
+	<div class="container">
+		<div ui-view></div>
 	</div>
-	<ul class="nav navbar-nav">
-		<li><a ui-sref="home">Home</a></li>
-		<li><a ui-sref="games">Games</a></li>
-		<li><a ui-sref="createGame">New Game</a></li>
-		<li><a ng-if="token != undefined" ui-sref="profile"><i class="fa fa-shield"></i>Profile</a></li>
-		<li><a ng-if="token == undefined" href="http://mahjongmayhem.herokuapp.com/auth/avans?callbackUrl=http://localhost:3000/%23/authcallback"><i class="fa fa-shield"></i> Login</a></li>
-	</ul>
-</nav>
-
-<div class="container">
-	<div ui-view></div>
-</div>
-
-
 </body>
 </html>
