--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
 	<style>
 		.navbar { border-radius:0; }
 	</style>
-	<script src="config/app.js"></script>
+	<script src="app.js"></script>
 </head>
 <body ng-app="Mahjong" ng-controller="HomeController">
 	<!-- NAVIGATION -->
